--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,10 @@
 kotlin.code.style=official
+java_version=17
+ktor_version=2.3.0
+kotlin_version=1.8.21
+kotlin_dt_version=0.4.0
+logback_version=1.2.11
+exposed_version = 0.41.1
+postgres_version=42.6.0
+prometheus_version=1.11.1
+logback_appenders_version=1.8.8
