--- a/deploy/docker-compose.yaml
+++ b/deploy/docker-compose.yaml
@@ -23,17 +23,20 @@ services:
 #      run /etc/newman/collections/otus_hl_hw1.postman_collection.json
 #      --environment /etc/newman/env.json
 #      --reporters cli,htmlextra
-#
+
   app:
     image: smith1984/hl-hw-app:0.0.2
     container_name: app
     hostname: app
+    entrypoint: ["java", "-XX:+UseContainerSupport", "-cp", "@/app/jib-classpath-file", "ru.beeline.ApplicationKt"]
     deploy:
       resources:
         limits:
-          cpus: '6.0'
+          cpus: '8.0'
+          memory: '8G'
         reservations:
-          cpus: '6.0'
+          cpus: '8.0'
+          memory: '8G'
     ports:
       - "8081:8080"
     depends_on:
@@ -45,11 +48,21 @@ services:
       - .env
     volumes:
       - "./volumes/app/application.yaml:/app/resources/application.yaml"
+      - "./volumes/app/logback.xml:/app/resources/logback.xml"
+    restart: unless-stopped
 
   postgres:
     image: postgres:15.2
     container_name: postgres
     hostname: postgres
+    deploy:
+      resources:
+        limits:
+          cpus: '8.0'
+          memory: '8G'
+        reservations:
+          cpus: '8.0'
+          memory: '8G'
     healthcheck:
       test: pg_isready -q -d $$POSTGRES_DB -U $$POSTGRES_USER
       timeout: 15s
@@ -62,6 +75,8 @@ services:
     volumes:
       - "./volumes/postgres/sql:/docker-entrypoint-initdb.d"
       - "./volumes/postgres/data:/data/postgres"
+      - "./volumes/postgres/postgresql.conf:/var/lib/postgresql/data/postgresql.conf"
+    restart: unless-stopped
 
   liquibase:
     container_name: liquibase
@@ -95,7 +110,7 @@ services:
     ports:
       - 3000:3000
     volumes:
-      - ./volumes/grafana:/var/lib/grafana
+      - ./volumes/grafana/lib/grafana:/var/lib/grafana
       - ./volumes/grafana/provisioning/:/etc/grafana/provisioning/
     container_name: grafana
     hostname: grafana
