--- a/gradle.properties
+++ b/gradle.properties
@@ -6,5 +6,6 @@ kotlin_dt_version=0.4.0
 logback_version=1.2.11
 exposed_version = 0.41.1
 postgres_version=42.6.0
+hikaricp_version = 5.0.1
 prometheus_version=1.11.1
 logback_appenders_version=1.8.8
