--- a/deploy/.env
+++ b/deploy/.env
@@ -2,5 +2,6 @@ POSTGRES_DB: postgres
 POSTGRES_USER: user
 POSTGRES_PASSWORD: password
 POSTGRES_URL: jdbc:postgresql://postgres:5432/highload
+POSTGRES_URL_SLAVE: jdbc:postgresql://postgres-slave:5432/highload
 PGDATA: /data/postgres
 POSTGRES_HOST_AUTH_METHOD: trust
