--- a/deploy/volumes/app/application.yaml
+++ b/deploy/volumes/app/application.yaml
@@ -14,6 +14,16 @@ psql:
     - prepStmtCacheSize_250
     - prepStmtCacheSqlLimit_2048
 
+psql-slave:
+  user: "$POSTGRES_USER:user"
+  password: "$POSTGRES_PASSWORD:password"
+  schema: "$POSTGRES_SCHEMA:public"
+  url: "$POSTGRES_URL_SLAVE:jdbc:postgresql://postgres-slave:5432/highload"
+  hikariProperties:
+    - cachePrepStmts_true
+    - prepStmtCacheSize_1000
+    - prepStmtCacheSqlLimit_8192
+
 jwt:
   secret: "secret"
   issuer: "http://app:8080/"
